    Oracle.  The statements must not return a result (e.g. DDL statements).
  - Add an option "dblink" for Oracle database links.
    The option can be used on foreign tables or with IMPORT FOREIGN SCHEMA.
    Patch by Nicolas Boullis.
  - Add a column option "strip_zeros" that automatically strips ASCII 0
    characters from strings.
    Per request from Alexander Lampalzer.

  Bugfixes:
  - Fix bad results with uncorrelated subqueries.
    This affects queries have a foreign scan with a filter based on a subplan.
    Reported by "srakazmus".
  - Fix "Internal oracle_fdw error: encountered unknown node type 144"
    This can happen in plans involving tables with identity columns.
    Reported by Yang Lin.

Version 2.2.0, released 2019-10-10
  Enhancements:
  - Add support for COPY to foreign tables (from PostgreSQL v11 on).
    This caused a crash before, as reported by "jkldv".
  - Add a new "collation" option for IMPORT FOREIGN SCHEMA that controls
    case folding.
    Patch by Sahap Asci.
  - Add support for Oracle XMLTYPE.
  - Set V$SESSION_CONNECT_INFO.CLIENT_DRIVER to "oracle_fdw".
    This makes it easier to identify the session on the Oracle side.

  Bugfixes:
  - Fix crash or bad results with pushed down join queries.
    The query target list can change during query planning, but oracle_fdw
    relied on the one from before.
    This bug only manifests in PostgreSQL v11.
    Bug found by Jaime Casanova and fixed by Tatsuro Yamada.
  - Fix push-down of foreign scan conditions with variables belonging
    to other tables.
    This can lead to wrong results and warnings like:
    WARNING:  column number x of foreign table "y" does not exist in
              foreign Oracle table, will be replaced by NULL
  - Fix crash in UPDATE or DELETE where the optimizer can deduce that no
    scan is required, for example with "WHERE 1 = 0".
    Reported by Andy Shipman.
  - Fix crash or bad results in queries with IN or "= ANY" where the element