@@ -506,9 +506,10 @@ following:
   ALL_TAB_COLUMNS.  That includes tables, views and materialized views,
   but not synonyms.
 
-- There are four supported options for IMPORT FOREIGN SCHEMA:
+- These are the supported options for IMPORT FOREIGN SCHEMA:
 
-  - **case**: controls case folding for table and column names during import.  
+  - **case**: controls case folding for table and column names during import
+
     The possible values are:
     - `keep`: leave the names as they are in Oracle, usually in upper case.
     - `lower`: translate all table and column names to lower case.
@@ -516,23 +517,34 @@ following:
                (this is the default).
 
   - **collation**: the collation used for case folding for the `lower` and
-    `smart` options of **case**.  
+    `smart` options of **case**
 
     The default value is `default` which is the database's default collation.
     Only collations in the `pg_catalog` schema are supported.
     See the `collname` values in the `pg_collation` catalog for a list of
     possible values.
 
-  - **dblink**: the Oracle database link through which the schema is accessed.
+  - **dblink**: the Oracle database link through which the schema is accessed
+
     This name must be written exactly as it occurs in Oracle's system catalog,
     so normally consist of uppercase letters only.
 
-  - **readonly** (boolean): controls if imported tables can be modified.
+  - **readonly**: sets the **readonly** option on all imported tables
 
-    If set to `true`, all imported tables are created with the foreign
-    table option **readonly** set to `true` (see the [Options](#3-options)
-    section).  
-    The default is `false`.
+    See the [Options](#3-options) section for details.
+
+  - **max_long**: sets the **max_long** option on all imported tables
+
+    See the [Options](#3-options) section for details.
+
+  - **sample_percent**: sets the **sample_percent** option
+    on all imported tables
+
+    See the [Options](#3-options) section for details.
+
+  - **prefetch**: sets the **prefetch** option on all imported tables
+
+    See the [Options](#3-options) section for details.
 
 - The Oracle schema name must be written exactly as it is in Oracle, so
   normally in upper case.  Since PostgreSQL translates names to lower case
